Added Haml-version of the test page. SeOnMoro tweet bot.

--- a/lib/views/matkakohteet.erb
+++ b/lib/views/matkakohteet.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>SeOnMoro! :: Äkkil&#228;ht&#246;j&#228; <%= @last_minute_count %> kpl</h1>
+<h1>SeOnMoro! :: Akkil&#228;ht&#246;j&#228; <%= @last_minute_count %> kpl</h1>
 
 <p>
   T&#228;m&#228; haku: <%= @last_minute_airport %> <br/>
