The main page now by default contains offers as JSON when it first loads. The master layout page has a function for appending offers to the page. The function utilizes a template engine that is able to match json to template elements

--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -1,1 +1,22 @@
-p Welcome to Hell
+!!!
+html
+	head
+		title SeOnMoro		
+		script(src='./javascripts/jquery-1.7.1.min.js')
+		script(src='./javascripts/json-template.js')
+		script
+			function AddOffers(offers)
+			{
+				if(!offers)
+					return;
+				
+				var offerTemplate = "<div>Offer: {UpdatedOn}</div>";
+
+				for(var i=0; i<offers.length; i++)
+				{
+					var offerHtml = jsontemplate.expand(offerTemplate, offers[i]);
+					$('#offerContainer').append(offerHtml);
+				}
+			}
+	body
+		!= body
